[tool.poetry]
name = "screen-toucher"
version = "0.1.0"
description = "Screen Toucher for Raspberry Pi"
authors = ["manekawa"]

[tool.poetry.dependencies]
python = "^3.7"
"RPi.GPIO" = "^0.7.0"

[tool.poetry.dev-dependencies]
ipython = "^7.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
